--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -167,11 +167,6 @@
                 <WebView webviewhelper:WebViewHelper.Html="{Binding Value}" MinWidth="300" Height="250"/>
             </Grid>
         </DataTemplate>
-        <Style x:Key="ListViewItemNewsStyle" TargetType="ListViewItem">
-            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-            <Setter Property="Padding" Value="0"/>
-            <Setter Property="Margin" Value="0"/>
-        </Style>
     </Page.Resources>
 
     <Grid Background="{ThemeResource BackGroundCustomColorBrush}">
@@ -227,8 +222,9 @@
                     <ListView Name="NewsListInfo"
                               ItemTemplateSelector="{StaticResource ListViewItemSelector}"
                               ItemsSource="{Binding NewsListItem}"
-                              ItemContainerStyle="{StaticResource ListViewItemNewsStyle}"
-                              SelectionChanged="NewsListInfo_SelectionChanged"/>
+                              ItemContainerStyle="{StaticResource ListViewItemDisableTilt}"
+                              SelectionChanged="NewsListInfo_SelectionChanged">
+                    </ListView>
                     <CommandBar Name="CommandBarForMobile" VerticalAlignment="Bottom"
                                 Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
                                 Background="{ThemeResource BackGroundCustomMainElementColorBrush}">
@@ -244,7 +240,12 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="CommentsListView" Grid.Row="0" ItemsSource="{Binding}" ItemTemplate="{StaticResource CommentsList}" HorizontalAlignment="Stretch" Style="{StaticResource CommentsListViewStyle}">
+                    <ListView x:Name="CommentsListView" Grid.Row="0" 
+                              ItemsSource="{Binding}" 
+                              ItemTemplate="{StaticResource CommentsList}" 
+                              HorizontalAlignment="Stretch" 
+                              Style="{StaticResource CommentsListViewStyle}"
+                              ItemContainerStyle="{StaticResource ListViewItemDisableTilt}">
                         <ListView.ItemContainerTransitions>
                             <TransitionCollection>
                                 <EntranceThemeTransition IsStaggeringEnabled="True" 
@@ -252,12 +253,7 @@
 								FromHorizontalOffset="100"/>
                             </TransitionCollection>
                         </ListView.ItemContainerTransitions>
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem">
-                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                                <Setter Property="Margin" Value="0"/>
-                            </Style>
-                        </ListView.ItemContainerStyle>
+
                     </ListView>
                     <Grid HorizontalAlignment="Stretch" Background="{ThemeResource BackGroundCustomHeaderColorBrush}" Height="48" Grid.Row="1" VerticalAlignment="Bottom">
                         <Grid.ColumnDefinitions>
