--- a/Onliner for windows 10/Onliner for windows 10/testpage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/testpage.xaml
@@ -6,54 +6,57 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:control="using:Onliner_for_windows_10.UserControls"
+    xmlns:controls="using:Continuity.Controls"
     mc:Ignorable="d">
+    <Page.Resources>
 
-    
-    <ScrollViewer Background="White" Height="200">
+    </Page.Resources>
 
-            <Border BorderThickness="0,0,0,1" BorderBrush="Gray">
-                <Grid  HorizontalAlignment="Stretch">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="auto"/>
 
-                    </Grid.RowDefinitions>
-                    <Ellipse Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Width="35"  Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="5">
+    <Grid Background="White">
+
+        <Grid Background="White">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="Экономист Алекс Гамарник: белорусской экономике помогут стартапы, правильное формирование цен и понимание требований рынка" TextWrapping="Wrap" Foreground="Blue" TextAlignment="Justify" FontSize="18" Margin="0,0,0,10" Style="{ThemeResource HeaderTextBlockStyle}"/>
+            <TextBlock Text="Сегодня в Беларуси очень много говорят о повышении эффективности работы госсектора, перераспределении рынка сбыта, привлечении инвестиций. Мне трудно с ходу давать советы касаемо вашей страны, но я могу предложить некоторые решения, которые показали свою состоятельность в Израиле и ряде других стран, где работала наша компания." TextWrapping="Wrap" Grid.Row="1" TextTrimming="WordEllipsis"/>
+
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel >
+                    <Ellipse  Width="70" Height="70" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="5">
                         <Ellipse.Fill>
                             <ImageBrush>
                                 <ImageBrush.ImageSource>
-                                    <BitmapImage DecodePixelHeight="250" DecodePixelWidth="250" UriSource="{Binding Image}" />
+                                    <BitmapImage DecodePixelHeight="250" DecodePixelWidth="250" UriSource="{Binding ImageUrl, Converter={StaticResource ImageUrlConverter}}" />
                                 </ImageBrush.ImageSource>
                             </ImageBrush>
                         </Ellipse.Fill>
                     </Ellipse>
-                <TextBlock Text="{Binding Nickname}" Grid.Column="1" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Margin="3" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="3" FontSize="12" TextAlignment="Right" VerticalAlignment="Center" Margin="2" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch"/>
-                    <control:CommentsContentViewer x:Name="CommentsContentViewer" control:CommentsContentViewer.HtmlString="{Binding Data}" BorderThickness="1" FontSize="14" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"/>
-                    <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2" >
-                        <TextBlock Text="&#xE19F;" FontSize="14" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Foreground="Gray"/>
-                        <TextBlock Text="{Binding LikeCount}" FontSize="14" Margin="2" VerticalAlignment="Center" Foreground="Gray"/>
-                    </StackPanel>
-                    <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Right">
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                            <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
-                            <TextBlock Text="Ответить" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="6,0,0,0" >
-                            <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
-                            <TextBlock Text="Цитировать" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
-                        </StackPanel>
-                    </StackPanel>
-                </Grid>
-            </Border>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="&#xE8BD;" Margin="5,5,0,0" FontSize="16" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding CommentsCount}" FontSize="16" Grid.Column="1" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    </Grid>
+                </StackPanel>
 
-    </ScrollViewer>
+                <TextBlock Text="Алекс Гамарник
+магистр экономики Иерусалимского университета. Совладелец, вице-президент Mertens Hoffman Management Consultants Ltd — одной из старейших (с 1978 года) консалтинговых компаний Израиля. Имеет более чем 15-летний опыт работы по управлению проектами, проведению исследований в интересах госведомств и крупных международных компаний." Grid.Column="1" TextWrapping="Wrap" Foreground="Gray" Style="{ThemeResource BaseTextBlockStyle}"/>
+            </Grid>
+        </Grid>
+    </Grid>
 
+  
+    
 </Page>
