--- a/Onliner for windows 10/Onliner for windows 10/Views/Shell.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Shell.xaml
@@ -2,163 +2,127 @@
     x:Class="Onliner_for_windows_10.Views.Shell"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.Views"
+    xmlns:local="using:Onliner_for_windows_10"
+    xmlns:local2="using:Onliner_for_windows_10.Views"
+    xmlns:MessagePage="using:Onliner_for_windows_10.Model.Message"
+    xmlns:SettingPage="using:Onliner_for_windows_10.Views.Setting"
     xmlns:UserControl="using:Onliner_for_windows_10.UserControls"
+    xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converter="using:Onliner_for_windows_10.Converters"
+    xmlns:controls="using:Template10.Controls"
     mc:Ignorable="d">
     <Page.Resources>
         <converter:UpdateLogoImage x:Key="UpdateImage"/>
     </Page.Resources>
-    <Grid Background="{ThemeResource BackGroundCustomColorBrush}">
-        <!--Visual state-->
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="VisualStateGroup">
-                <VisualState x:Name="VisualState">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="300"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="SplitView.(SplitView.DisplayMode)" Value="Overlay"></Setter>
-                        <Setter Target="BackButton.(UIElement.Visibility)" Value="Collapsed"/>
-                    </VisualState.Setters>
-                </VisualState>
-                <VisualState x:Name="VisualState1">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="800"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="SplitView.(SplitView.DisplayMode)" Value="CompactOverlay"/>
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
-        <!-- Header button-->
-        <StackPanel Background="{ThemeResource BackGroundCustomHeaderColorBrush}"
-                    VerticalAlignment="Top" 
-                    Height="50" 
-                    Grid.ColumnSpan="2">
-            <Grid Name="HeaderGridShellPage">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <StackPanel Name="NavigationStackpanel" Grid.Column="0" Orientation="Horizontal">
-                    <Button Name="HamburgerButton" 
-                        Content="&#xE700;"
-                        Width="50" 
-                        Height="50" 
-                        FontSize="20"
-                        Grid.Column="0"
-                        FontWeight="Bold"
-                        Click="HamburgerButton_Click" 
-                        Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" FontFamily="Segoe MDL2 Assets"
-                        Background="{ThemeResource BackGroundCustomHeaderColorBrush}" BorderThickness="0"
-                        />
-                    <Button Name="BackButton" 
-                            Width="50" 
-                            Height="50" 
-                            Grid.Column="1" 
-                            Content="&#xE112;" 
-                            FontFamily="Segoe MDL2 Assets"
-                            Background="{ThemeResource BackGroundCustomHeaderColorBrush}" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
-                            Click="BackButton_Click"/>
-                    <TextBlock Text="{Binding NameActivePage}" Style="{ThemeResource BodyTextBlockStyle}" 
-                               FontFamily="Segoe UI Black" 
-                               FontWeight="Bold" 
-                               HorizontalAlignment="Center" 
-                               FontSize="16"
-                               Padding="0" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
-                               VerticalAlignment="Center" Margin="5,0,0,0"/>
-                    <!--{Binding NameActivePage}-->
-                </StackPanel>
-                <StackPanel x:Name="MessageStackPanel" Orientation="Horizontal" Grid.Column="4">
-                    <Button Name="MessagePage" Width="50" Padding="0" Margin="0"
-                        Height="50"  Click="Message_Click" BorderThickness="0" Background="{ThemeResource BackGroundCustomHeaderColorBrush}">
-                        <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto"/>
-                                <ColumnDefinition Width="auto"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="&#xE715;" FontSize="24" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" TextAlignment="Center" HorizontalAlignment="Center" Margin="1" Grid.Column="0" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                            <TextBlock Text="{Binding UnreadeMessage}" FontSize="16" VerticalAlignment="Center" TextAlignment="Center" HorizontalAlignment="Center" Margin="1,0,0,2" Grid.Column="1" FontWeight="Bold" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                            <!--"{Binding UnreadeMessage}"-->
-                        </Grid>
-                    </Button>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
-
-        <!-- Hamburger menu-->
-        <SplitView x:Name="SplitView"  
-                   OpenPaneLength="250" 
-                   CompactPaneLength="50"
-                   DisplayMode="CompactOverlay" 
-                   IsPaneOpen="False" 
-                   PaneBackground="Yellow" 
-                   Content="{Binding}" 
-                   Margin="0,50,0,0" Grid.ColumnSpan="2">
-            <VisualStateManager.VisualStateGroups>
-                <VisualStateGroup>
-                    <VisualState x:Name="HardwareButtons">
-                        <VisualState.Setters>
-                            <Setter Target="BackRadioButton.Visibility" Value="Collapsed" />
-                        </VisualState.Setters>
-                    </VisualState>
-                </VisualStateGroup>
-            </VisualStateManager.VisualStateGroups>
-            <SplitView.Pane>
-                <Grid Background="{ThemeResource BackGroundCustomYellowColorBrush}">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <StackPanel x:Name="SplitViewPanePanel" Grid.Row="0">
-                        <Button Name="ProfileButton" Background="Transparent" HorizontalAlignment="Stretch" Padding="0" Height="50" BorderThickness="0" Click="ProfileButton_Click">
-                            <Grid Width="250" Height="50">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-
-                                <Ellipse Width="30" Height="30"  Grid.Column="0" Margin="10,0,0,0">
-                                    <Ellipse.Fill>
-                                        <ImageBrush ImageSource="{Binding AvatarUrl}" />
-                                    </Ellipse.Fill>
-                                </Ellipse>
-                                <TextBlock FontSize="16" 
-                                           Text="{Binding Login}"
-                                           FontFamily="Segoe UI"
-                                           Height="25"
-                                           Grid.Column="1" 
-                                           HorizontalAlignment="Left"
-                                           Margin="12,0,0,0" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}">
-                                </TextBlock>
-                            </Grid>
-                        </Button>
-
-                        <RadioButton x:Name="NewsRadioButton" Click="NewsRadioButton_Click" Style="{StaticResource NavRadioButtonStyle}" Tag="&#xE136;" Content="Новости" GroupName="Navigation" Height="50"/>
-                        <RadioButton x:Name="CatalogRadioButton" Click="CatalogRadioButton_Click" Style="{StaticResource NavRadioButtonStyle}" Tag="&#xE211;" Content="Каталог" GroupName="Navigation" Height="50"/>
-                        <RadioButton x:Name="BaraholkaRadoButton" Click="BaraholkaRadoButton_Click" Style="{StaticResource NavRadioButtonStyle}" Tag="&#xEC25;" Content="Барахолка" GroupName="Navigation" Height="50"/>
-                        <RadioButton x:Name="ForumRadiadoButton" Click="ForumRadiadoButton_Click" Style="{StaticResource NavRadioButtonStyle}" Tag="&#xE76E;" Content="Форум" GroupName="Navigation" Height="50"/>
-                        <RadioButton x:Name="MoneyRadiadoButton"  Style="{StaticResource NavRadioButtonStyle}" Tag="&#xE8EF;" Content="Курсы валют" GroupName="Navigation" Height="50" Click="MoneyButton_Click"/>
-                        <RadioButton x:Name="WeatherRadiadoButton" Style="{StaticResource NavRadioButtonStyle}" Tag="&#xE753;" Content="Погода" GroupName="Navigation" Height="50" Click="WeatherButton_Click"/>
+    <!--Main navigation control-->
+    <controls:HamburgerMenu x:Name="MyHamburgerMenu"
+                    PaneWidth="200"
+                    HamburgerForeground="Black"
+                    NavAreaBackground="Yellow"
+                    NavButtonBackground="Yellow"
+                    HamburgerBackground="Yellow"
+                    SecondarySeparator="Black"
+                    NavButtonForeground="Black"
+                    NavButtonCheckedBackground="Orange"
+                    NavButtonCheckedForeground="White"
+                    VisualStateNarrowMinWidth="0"
+                    VisualStateNormalMinWidth="800">
+        <controls:HamburgerMenu.PrimaryButtons>
+            <!--  Profile page  -->
+            <controls:HamburgerButtonInfo x:Name="Test">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" BorderBrush="LightGray" BorderThickness="0,1,0,0">
+                    <Ellipse Width="30" Height="30"  Margin="10,8,0,0" VerticalAlignment="Center">
+                        <Ellipse.Fill>
+                            <ImageBrush x:Name="ImageS" ImageSource="{Binding AvatarUrl}" />
+                        </Ellipse.Fill>
+                    </Ellipse>
+                    <StackPanel Margin="20,10,0,0" VerticalAlignment="Center">
+                        <TextBlock x:Name="Login" VerticalAlignment="Center" Text="{Binding Login}" />
+                        <TextBlock Text="online" Foreground="Gray" FontSize="12"/>
                     </StackPanel>
-                    <StackPanel  Grid.Row="2">
-                        <RadioButton x:Name="SettingRadioButton" 
-                                     Click="SettingRadioButton_Click" 
-                                     Style="{StaticResource NavRadioButtonStyle}" 
-                                     Tag="&#xE713;" 
-                                     Content="Setting" 
-                                     GroupName="Navigation" 
-                                     Height="50"/>
-                    </StackPanel>
-                </Grid>
-            </SplitView.Pane>
-        </SplitView>
-    </Grid>
+                </StackPanel>
+            </controls:HamburgerButtonInfo>
+            <!--  News page  -->
+            <controls:HamburgerButtonInfo ClearHistory="True" PageType="local2:NewsPage">
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Width="48" Height="48" Symbol="PreviewLink" />
+                    <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="Новости" />
+                </StackPanel>
+            </controls:HamburgerButtonInfo>
+            <!--  Catalog page  -->
+            <controls:HamburgerButtonInfo ClearHistory="True" PageType="local2:WeatherPage">
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Width="48" Height="48" Symbol="Shop" />
+                    <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="каталог" />
+                </StackPanel>
+            </controls:HamburgerButtonInfo>
+            <!--  Weather page  -->
+            <controls:HamburgerButtonInfo ClearHistory="True" PageType="local2:WeatherPage">
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Width="48" Height="48" Symbol="World" />
+                    <Grid Margin="12,0,0,0" VerticalAlignment="Center">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="110"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Погода"/>
+                        <TextBlock Text="{Binding Wheather}" Margin="2" Foreground="Black" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1"/>
+
+                    </Grid>
+                </StackPanel>
+            </controls:HamburgerButtonInfo>
+            <!--  Message page  -->
+            <controls:HamburgerButtonInfo ClearHistory="True" PageType="MessagePage:MessagePage">
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Width="48" Height="48" Symbol="Mail" />
+                    <Grid Margin="12,0,0,0" VerticalAlignment="Center">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="110"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Сообщения"/>
+                        <TextBlock Text="{Binding UnreadeMessage}" Margin="2" Foreground="Black" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1"/>
+                    </Grid>
+                </StackPanel>
+            </controls:HamburgerButtonInfo>
+            <!--  Current page  -->
+            <controls:HamburgerButtonInfo ClearHistory="True">
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Width="48" Height="48" Symbol="Tag" />
+                    <Grid Margin="12,0,0,0" VerticalAlignment="Center">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="120"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Курсы валют"/>
+                        <TextBlock Text="{Binding Current}" Margin="2" Foreground="Black" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1"/>
+                    </Grid>
+                </StackPanel>
+            </controls:HamburgerButtonInfo>
+            <!--  Test page  -->
+            <controls:HamburgerButtonInfo ClearHistory="True" PageType="local:testpage">
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Width="48" Height="48" Symbol="Page" />
+                    <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="тест" />
+                </StackPanel>
+            </controls:HamburgerButtonInfo>
+        </controls:HamburgerMenu.PrimaryButtons>
+
+        <controls:HamburgerMenu.SecondaryButtons>
+            <!--  Setting page  -->
+            <controls:HamburgerButtonInfo x:Name="SettingsButton" PageParameter="0" PageType="SettingPage:SettingPage">
+                <controls:HamburgerButtonInfo.NavigationTransitionInfo>
+                    <SuppressNavigationTransitionInfo />
+                </controls:HamburgerButtonInfo.NavigationTransitionInfo>
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Width="48" Height="48" Symbol="Setting" />
+                    <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="Settings" />
+                </StackPanel>
+            </controls:HamburgerButtonInfo>
+        </controls:HamburgerMenu.SecondaryButtons>
+
+    </controls:HamburgerMenu>
 </Page>
