--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -4,7 +4,12 @@
     xmlns:local="using:Onliner_for_windows_10.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:MyToolkit.Controls"
+    xmlns:Behaviors="using:Template10.Behaviors"
+      xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+      xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+     xmlns:Media="using:Microsoft.Xaml.Interactions.Media"
+    xmlns:controls="using:Template10.Controls"
+    xmlns:conver="using:Onliner_for_windows_10.Converters"
     xmlns:Model="using:Onliner_for_windows_10.Model"
     xmlns:Selector="using:Onliner_for_windows_10.Model.DataTemplateSelector"
     xmlns:toolkit="using:MyToolkit.Controls"
@@ -14,6 +19,9 @@
     mc:Ignorable="d">
 
     <Page.Resources>
+
+       
+
         <DataTemplate x:Key="CommentsList">
             <Border BorderThickness="0,0,0,1" BorderBrush="Gray">
                 <Grid  HorizontalAlignment="Stretch">
@@ -109,8 +117,6 @@
             VideoTemlate="{StaticResource VideoTemlate}"
             WebTemlate="{StaticResource WebTemlate}"
             />
-
-
         <DataTemplate x:Key="HeaderTemlate">
             <Grid HorizontalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
@@ -144,7 +150,8 @@
         </DataTemplate>
         <DataTemplate x:Key="PictureTemlate">
             <Grid HorizontalAlignment="Stretch">
-                <Image Source="{Binding Value}"/>
+                <Image Source="{Binding Value}">
+                </Image>
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="StoryTemlate">
@@ -167,9 +174,10 @@
                 <WebView webviewhelper:WebViewHelper.Html="{Binding Value}" MinWidth="300" Height="250"/>
             </Grid>
         </DataTemplate>
-    </Page.Resources>
 
-    <Grid Background="{ThemeResource BackGroundCustomColorBrush}">
+        <conver:BooleanToVisibilityConverter x:Key="BooleToVisible"/>
+    </Page.Resources>
+    <RelativePanel>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="FullNewsVisualStateGroup">
                 <VisualState x:Name="DeskTopVisualState">
@@ -201,98 +209,118 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <Grid x:Name="MainGrid">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid x:Name="MainNewsData"
+        <controls:PageHeader x:Name="pageHeader" 
+                             Frame="{x:Bind Frame}"
+                             Background="Yellow"
+                             BackButtonVisibility="Visible"
+                             VisualStateNarrowMinWidth="-1">
+            <!--  place stretched, across top  -->
+            <RelativePanel.AlignTopWithPanel>True</RelativePanel.AlignTopWithPanel>
+            <RelativePanel.AlignRightWithPanel>True</RelativePanel.AlignRightWithPanel>
+            <RelativePanel.AlignLeftWithPanel>True</RelativePanel.AlignLeftWithPanel>
+            <!--  secondary commands  -->
+            <controls:PageHeader.PrimaryCommands>
+                <AppBarButton Icon="Save" Label="Save" Command="{Binding SaveNewsInDB}"/>
+                <AppBarButton Icon="Link" Label="Открыть в бр" Command="{Binding OpenNewsInBrowser}"/>
+                <AppBarButton Name="CommentsCoomBarButton" Icon="Comment" Label="Комментарии" Command="{Binding ChangeCommetnsGridVisible}"/>
+            </controls:PageHeader.PrimaryCommands>
+        </controls:PageHeader>
+        <Grid Background="{ThemeResource BackGroundCustomColorBrush}">
+            <RelativePanel.Below>pageHeader</RelativePanel.Below>
+            <RelativePanel.AlignLeftWithPanel>True</RelativePanel.AlignLeftWithPanel>
+            <RelativePanel.AlignRightWithPanel>True</RelativePanel.AlignRightWithPanel>
+            <RelativePanel.AlignBottomWithPanel>True</RelativePanel.AlignBottomWithPanel>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid x:Name="MainGrid">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid x:Name="MainNewsData"
                       Grid.Row="0" 
                       Grid.Column="0" 
                       Grid.RowSpan="2">
-                    <ListView Name="NewsListInfo"
+                        <ListView Name="NewsListInfo"
                               ItemTemplateSelector="{StaticResource ListViewItemSelector}"
-                              ItemsSource="{Binding NewsListItem}"
+                              ItemsSource="{Binding NewsItemContent}"
                               ItemContainerStyle="{StaticResource ListViewItemDisableTilt}"
                               SelectionChanged="NewsListInfo_SelectionChanged">
-                    </ListView>
-                    <CommandBar Name="CommandBarForMobile" VerticalAlignment="Bottom"
-                                Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
-                                Background="{ThemeResource BackGroundCustomMainElementColorBrush}">
-                        <AppBarButton Name="CommentsCoomBarButton" Label="Комментарии" Icon="Comment"
-                                      Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
-                                      Click="AppBarButton_Click"/>
-                        <AppBarButton Label="Открыть в браузере" Icon="World" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                        <AppBarButton Label="Сохранить статью" Icon="Save" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                    </CommandBar>
-                </Grid>
-                <Grid x:Name="GridComments" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Background="{ThemeResource BackGroundCustomColorBrush}" Visibility="Visible">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <ListView x:Name="CommentsListView" Grid.Row="0" 
-                              ItemsSource="{Binding}" 
+                        </ListView>
+                    </Grid>
+                    <Grid x:Name="GridComments" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Background="{ThemeResource BackGroundCustomColorBrush}" Visibility="{Binding CommentsVisible, Converter={StaticResource BooleToVisible}}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <ListView x:Name="CommentsListView" Grid.Row="0" 
+                              ItemsSource="{Binding CommentsItem}" 
                               ItemTemplate="{StaticResource CommentsList}" 
                               HorizontalAlignment="Stretch" 
                               Style="{StaticResource CommentsListViewStyle}"
                               ItemContainerStyle="{StaticResource ListViewItemDisableTilt}">
-                        <ListView.ItemContainerTransitions>
-                            <TransitionCollection>
-                                <EntranceThemeTransition IsStaggeringEnabled="True" 
+                            <ListView.ItemContainerTransitions>
+                                <TransitionCollection>
+                                    <EntranceThemeTransition IsStaggeringEnabled="True" 
 								FromVerticalOffset="0" 
 								FromHorizontalOffset="100"/>
-                            </TransitionCollection>
-                        </ListView.ItemContainerTransitions>
+                                </TransitionCollection>
+                            </ListView.ItemContainerTransitions>
 
-                    </ListView>
-                    <Grid HorizontalAlignment="Stretch" Background="{ThemeResource BackGroundCustomHeaderColorBrush}" Height="48" Grid.Row="1" VerticalAlignment="Bottom">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBox Name="ContentCommentTextBox" 
+                        </ListView>
+                        <Grid HorizontalAlignment="Stretch" Background="LightGray" Height="48" Grid.Row="1" VerticalAlignment="Bottom">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox Name="ContentCommentTextBox" 
                                  VerticalAlignment="Center"
                                  Margin="5"
                                  HorizontalAlignment="Stretch"
                                  AcceptsReturn="True"
                                  Grid.Column="0"
-                                 BorderThickness="0"/>
-                        <Button Name="AddCommentButton"
+                                 PlaceholderText="Введите сообщение"
+                                 BorderThickness="0">
+                                <Interactivity:Interaction.Behaviors>
+                                    <Core:EventTriggerBehavior EventName="TextChanged">
+                                        <Core:InvokeCommandAction Command="{Binding SendButtonActive}"/>
+                                    </Core:EventTriggerBehavior>
+                                </Interactivity:Interaction.Behaviors>
+                            </TextBox>
+                            <Button Name="AddCommentButton"
                                 Content="&#xE8F2;" 
                                 FontSize="18" 
                                 FontFamily="Segoe MDL2 Assets" 
                                 Margin="4"
+                                IsEnabled="{Binding SendButton}"
                                 Background="{ThemeResource BackGroundCustomHeaderColorBrush}" 
                                 Grid.Column="1" 
                                 Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
                                 HorizontalAlignment="Center"
-                                Click="AddCommentButton_Click"/>
+                                Command="{Binding CommentsAdd}" CommandParameter="{Binding ElementName=ContentCommentTextBox, Path=Text}"/>
+                        </Grid>
                     </Grid>
                 </Grid>
             </Grid>
-        </Grid>
-        <ProgressRing Name="NewsProgressRing" 
+            <ProgressRing Name="NewsProgressRing" 
                       Width="100" 
                       Height="100"
                       Foreground="Blue"
                       VerticalAlignment="Center"
                       HorizontalAlignment="Center"
-                      IsActive="True"/>
-    </Grid>
-
+                      IsActive="{Binding ProgressRing}"/>
+        </Grid>
+    </RelativePanel>
     <Page.Transitions>
         <TransitionCollection>
-            <PaneThemeTransition Edge="Bottom"/>
+            <PaneThemeTransition Edge="Top"/>
         </TransitionCollection>
     </Page.Transitions>
 </Page>
