--- a/Onliner for windows 10/Onliner for windows 10/Views/WeatherPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/WeatherPage.xaml
@@ -4,15 +4,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Onliner_for_windows_10.Views"
-     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
-  xmlns:Core="using:Microsoft.Xaml.Interactions.Core" 
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:Core="using:Microsoft.Xaml.Interactions.Core" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="using:Onliner_for_windows_10"
     xmlns:viewModel="using:Onliner_for_windows_10.View_Model"
-    mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance viewModelWeather:WeatherPage , IsDesignTimeCreatable=True}"
-    >
+    xmlns:controls="using:Template10.Controls"
+    xmlns:vm="using:Onliner_for_windows_10.View_Model" mc:Ignorable="d">
+
     <!--°-->
     <Page.Resources>
         <converters:IndexImageTonameImageConverter x:Key="Convert"/>
@@ -117,10 +117,36 @@
 
         </DataTemplate>
 
-
     </Page.Resources>
-    <ScrollViewer>
-        <Grid Background="{ThemeResource BackGroundCustomColorBrush}">
+
+    <Page.DataContext>
+        <vm:WeatherViewModel x:Name="ViewModel"/>
+    </Page.DataContext>
+
+    <RelativePanel>
+        <controls:PageHeader x:Name="pageHeader" 
+                             Frame="{x:Bind Frame}"
+                             Text="Погода"
+                             FontWeight="Bold"
+                             Background="Yellow"
+                             BackButtonVisibility="Visible"
+                             VisualStateNarrowMinWidth="-1">
+            <!--  place stretched, across top  -->
+            <RelativePanel.AlignTopWithPanel>True</RelativePanel.AlignTopWithPanel>
+            <RelativePanel.AlignRightWithPanel>True</RelativePanel.AlignRightWithPanel>
+            <RelativePanel.AlignLeftWithPanel>True</RelativePanel.AlignLeftWithPanel>
+            <!--  secondary commands  -->
+            <controls:PageHeader.SecondaryCommands>
+                <AppBarButton Icon="Link" Label="Settings" />
+            </controls:PageHeader.SecondaryCommands>
+        </controls:PageHeader>
+        
+        <Grid Background="{ThemeResource BackGroundCustomColorBrush}" Grid.Row="1"
+              BorderBrush="LightGray" BorderThickness="0,1,0,0">
+            <RelativePanel.Below>pageHeader</RelativePanel.Below>
+            <RelativePanel.AlignLeftWithPanel>True</RelativePanel.AlignLeftWithPanel>
+            <RelativePanel.AlignRightWithPanel>True</RelativePanel.AlignRightWithPanel>
+            <RelativePanel.AlignBottomWithPanel>True</RelativePanel.AlignBottomWithPanel>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
@@ -128,7 +154,6 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-
             <!--MAIN WEATHER INFORMATION-->
             <Grid Name="NowWeatherGrid" 
               Grid.Row="0"
@@ -178,7 +203,7 @@
                                  Height="150"
                                  VerticalAlignment="Top"
                                  Grid.Row="0"
-                                 Grid.Column="0">
+                                 Grid.Column="0" Margin="5">
                             <Path Fill="White" Data="{Binding falloutIcon, Converter={StaticResource Convert}}"/>
                         </Viewbox>
                         <TextBlock Name="MainTemperatureWeather"
@@ -187,6 +212,7 @@
                                    Foreground="White" 
                                    Grid.Row="0" 
                                    Grid.Column="1"
+                                   VerticalAlignment="Center" HorizontalAlignment="Center"
                                    Style="{ThemeResource  BodyTextBlockStyle}">
                            <Run Text="{Binding temperature, Mode=TwoWay}"/>°
                         </TextBlock>
@@ -207,6 +233,7 @@
                                    Grid.Row="0" 
                                    Grid.ColumnSpan="3"
                                    TextAlignment="Left"
+                                   TextWrapping="Wrap"
                                    Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
                             <TextBlock Text="Ветер: "
                                    FontWeight="Bold" 
@@ -256,6 +283,5 @@
             </ScrollViewer>
             <ProgressRing Name="WeatherProgressRing" Width="100" Height="100" Foreground="Blue" VerticalAlignment="Center" HorizontalAlignment="Center"  IsActive="{Binding CurrentProgress}" Grid.RowSpan="5"/>
         </Grid>
-
-    </ScrollViewer>
+    </RelativePanel>
 </Page>
